# cafe

./: .eslintrc.json  .gitignore  AGENTS.md  CLAUDE.md  README.md  capacitor.config.ts  diagnose-mobile-connection.md  electron.vite.config.ts  package-lock.json  package.json  product.example.json  product.json  setup-android-env.ps1  tsconfig.web.json  vite.config.mobile.ts
.github/workflows/: build-release.yml
android/app/: build.gradle  release-keystore.jks
cafe-local/mineru-mcp/: README.md  build-wheel.py  pyproject.toml
cafe-local/mineru-mcp/src/mineru_mcp/: __init__.py  client.py  server.py  tools.py
cafe-local/mineru-mcp/tests/: __init__.py  conftest.py  test_client.py  test_tools.py
docs/: CODE_ANALYSIS_REPORT.md  adapter-implementation-complete.md  api-discovery-log.md  api-reverse-engineering-guide.md  build-and-test-report.md  debug-and-fix-guide.md  quick-fix-guide.md  skillshub-clawhub-final-fix.md  skillshub-clawhub-fix-report.md  skillshub-clawhub-integration-test.md
docs/integration-plans/: MASTER_PLAN.md  MINERU_INTEGRATION_SUMMARY.md  MINERU_QUICKSTART.md  MINERU_USER_GUIDE.md  PHASE1_MINERU_INTEGRATION.md  (+1 more)
patches/: @anthropic-ai+claude-agent-sdk+0.2.89.patch
resources/: installer.nsh
scripts/: afterPack.cjs  analyze-api.js  beforePack.cjs  build-mineru-mcp.cjs  bump-rc-version.mjs  fetch-registry-data.ts  force-rebuild.ps1  force-rebuild.sh  generate-icons.sh  postinstall.mjs  prepare-binaries.mjs  test-adapters.js  test-skillshub-api-structure.js  test-skillshub-api.js  translate-i18n.mjs  update-android-splash.mjs
(+186 files in other folders)
